Add class blue to img, Alter placeholder img
I did this in order to make it easier to differentiate
between top-page img and mid-page img. Added white img
as placeholder for easier formatting.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </div>
 <div class="opening">
     <div class="ooga">
-        <h1>This website is awesome</h1>
+        <h1>This website is</h1>
         <p >This website has some other text at a smaller font and lower contrast</p>
         <button>Sign Up</button>
     </div>
-        <img id="placeholderone" src="https://www.shutterstock.com/image-vector/ui-image-placeholder-wireframes-apps-260nw-1037719204.jpg" alt="this is a placeholder image">
+        <img id="placeholderone" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzK3XP6yZKOKF6Xn-iAM6SKwvAq3fxJuPCSPr93pnK59nnZquEc1vGOSPw3x1VKIqwh80&usqp=CAU" alt="this is a placeholder image">
 </div>   
         
     
@@ -37,33 +37,34 @@
 
 <div class="container">
     <div class="info">
-        <img src="" alt="blue box">
+        <img class="blue" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzK3XP6yZKOKF6Xn-iAM6SKwvAq3fxJuPCSPr93pnK59nnZquEc1vGOSPw3x1VKIqwh80&usqp=CAU" alt="blue box">
         <div class="text">Words</div>
     </div>
 
     <div class="info">
-        <img src="" alt="blue box">
+        <img class="blue" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzK3XP6yZKOKF6Xn-iAM6SKwvAq3fxJuPCSPr93pnK59nnZquEc1vGOSPw3x1VKIqwh80&usqp=CAU" alt="blue box">
         <div class="text">Words</div>
     </div>
 
     <div class="info">
-        <img src="" alt="blue box">
+        <img class="blue" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzK3XP6yZKOKF6Xn-iAM6SKwvAq3fxJuPCSPr93pnK59nnZquEc1vGOSPw3x1VKIqwh80&usqp=CAU" alt="blue box">
         <div class="text">Words</div>
     </div>
 
     <div class="info">
-        <img src="" alt="blue box">
+        <img class="blue" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzK3XP6yZKOKF6Xn-iAM6SKwvAq3fxJuPCSPr93pnK59nnZquEc1vGOSPw3x1VKIqwh80&usqp=CAU" alt="blue box">
         <div class="text">Words</div>
     </div>
 
 
 
 </div>
+
 <div class="mid2">Here is a section where pretty much anything can go, maybe a quote?</div>
 
 <div class="call">
     <h3>Call to action!</h3>
-    <p>Click the button on the LEFT</p>
+    <p>Click the button on the RIGHT</p>
     <button>Sign Up</button>
 </div>
 
