Add Footer, Add Bottomb ID Added bottomb ID selector to add different formatting from the other button.

--- a/index.html
+++ b/index.html
@@ -60,13 +60,16 @@
 
 </div>
 
-<div class="mid2">Here is a section where pretty much anything can go, maybe a quote?</div>
+<div class="mid2"><em>Here is a section where pretty much anything can go, maybe a quote?</em></div>
 
 <div class="call">
+    <div class="booga">
     <h3>Call to action!</h3>
     <p>Click the button on the RIGHT</p>
-    <button>Sign Up</button>
+    </div>
+    <button id="bottomb">Sign Up</button>
 </div>
+<div class="footer">Copyright &copy The Odin Project</div>
 
 </body>
 </html>
